:sparkles: list string by locale
